ADDED THE LOCATION OF THE IMAGE

--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
     </div>
     <div class="imageContanier">
         <div class="title">
-            <h1>This website is awesome</h1>
-            <p>This website has smoe subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button>Sign up</button>
+            <h1 class="awesome">This website is awesome</h1>
+            <p>This website has smoe subtext that goes here under 
+            the main title. It's a smaller font and the color is lower contrast</p>
+            <button class="dugme1">Sign up</button>
         </div>
-        <img src="" alt="nema slike za sad">
+        <img class="image" src="images/boliviainteligente-FSXtdnGCyHY-unsplash.jpg" alt="cool art">
     </div>
     <div class="white">
         <h1>Some random information</h1>
@@ -51,15 +52,15 @@
         </div>
     </div>
         <div class="quote">
-            <h1>This si an isnpiring quote, or a testimonial from a customer. Maybe it's just filling space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</h1>
-            <p>-Thor, God of Thunder</p>
+            <p>This si an isnpiring quote, or a testimonial from a customer. Maybe it's just filling space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</h1>
+            <p class="thor">-Thor, God of Thunder</p>
         </div>
         <div class="blue">
             <div class="action">
                 <h1>Call to action! it's time!</h1>
                 <p>Sign up for our product by clicking taht button right over there!</p>
             </div>
-            <button>Sign up</button>
+            <button class="dugme2">Sign up</button>
         </div>
     
     <div class="footer">
